project('Iges_Fortran', 'fortran', meson_version: '>=0.49')
src = files([
  'src/count_pd.f90',
  'src/filename.f90',
  'src/iges_master.f90',
  'src/main.f90',
  'src/num_records.f90',
  'src/open_close.f90',
  'src/read_T_data.f90',
  'src/read_ascii_pd.f90',
  'src/read_ascii_pd.f90',
  'src/read_global_ascii.f90',
  'src/record_pos_calcs.f90',
  'src/type_126.f90',
  'src/type_128.f90',
  'src/type_141.f90',
  'src/type_143.f90',
  'src/type_314.f90',
  'src/type_dir_meta.f90',
  'src/type_directory.f90',
  'src/type_global.f90',
  'src/type_metadata2.f90',
  'src/type_start.f90',
  'src/type_tail.f90',
])
executable('import', src)
